--- a/config/CMakeLists.txt
+++ b/config/CMakeLists.txt
@@ -13,5 +13,5 @@ set(vr_config_files
 set_source_files_properties(${vr_config_files} PROPERTIES HEADER_FILE_ONLY TRUE)
 source_group("Config Files" FILES ${vr_config_files})
 
-install(FILES ${vr_config_files} DESTINATION ${CMAKE_INSTALL_PREFIX}/share/MinVR${MINVR_VERSION_STR}/config COMPONENT CoreLib)
+install(FILES ${vr_config_files} DESTINATION ${INSTALL_CONFIGFILES_DEST} COMPONENT CoreLib)
 
