--- a/utils/mvrlookup/CMakeLists.txt
+++ b/utils/mvrlookup/CMakeLists.txt
@@ -24,4 +24,4 @@ target_link_libraries(${PROJECT_NAME} MinVR ${OPENGL_gl_LIBRARY} ${ALL_LIBS})
 
 set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER "utils")
 
-install(TARGETS MVRLookup RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin COMPONENT Utils)
+install(TARGETS MVRLookup RUNTIME DESTINATION ${INSTALL_BIN_DEST} COMPONENT Utils)
