--- a/plugins/Scalable/CMakeLists.txt
+++ b/plugins/Scalable/CMakeLists.txt
@@ -40,7 +40,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../src>  # for headers when building
     $<INSTALL_INTERFACE:${INSTALL_INCLUDE_DEST}>              # for client in install mode
 )
-target_link_libraries(${PROJECT_NAME} MinVR)
+target_link_libraries(${PROJECT_NAME} PUBLIC MinVR)
 
 
 # Setup dependency on OpenGL:
