--- a/plugins/VRPN/CMakeLists.txt
+++ b/plugins/VRPN/CMakeLists.txt
@@ -41,12 +41,12 @@ target_include_directories(${PROJECT_NAME} PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../src>  # for headers when building
     $<INSTALL_INTERFACE:${INSTALL_INCLUDE_DEST}>              # for client in install mode
 )
-target_link_libraries(${PROJECT_NAME} MinVR)
+target_link_libraries(${PROJECT_NAME} PUBLIC MinVR)
 
 
 # Setup dependency on VRPN:
 include(UseVRPN)
-UseVRPN(${PROJECT_NAME} PUBLIC)
+UseVRPN(${PROJECT_NAME} PRIVATE)
 
 
 # Installation:
