--- a/tests-interactive/opengl-fixedfuncpipeline/CMakeLists.txt
+++ b/tests-interactive/opengl-fixedfuncpipeline/CMakeLists.txt
@@ -27,7 +27,7 @@ add_executable(${PROJECT_NAME} ${HEADERFILES} ${SOURCEFILES})
 
 # Setup dependency on libMinVR:
 target_include_directories(${PROJECT_NAME} PUBLIC ../../src)
-target_link_libraries(${PROJECT_NAME} MinVR)
+target_link_libraries(${PROJECT_NAME} PUBLIC MinVR)
 
 
 # Setup dependency on OpenGL:
