updates for building on linux

--- a/tests-interactive/opengl-multithreaded/CMakeLists.txt
+++ b/tests-interactive/opengl-multithreaded/CMakeLists.txt
@@ -43,10 +43,10 @@ include(UseOpenGL)
 UseOpenGL(${PROJECT_NAME} PUBLIC)
 
 
-# Setup dependency on GLEW (only needed on Windows):
-if (WIN32)
-  include(UseGLEW)
-  UseGLEW(${PROJECT_NAME} PUBLIC)
+# Setup dependency on GLEW (not needed on OSX):
+if (NOT APPLE)
+    include(UseGLEW)
+    UseGLEW(${PROJECT_NAME} PUBLIC)
 endif()
 
 
