--- a/tests-batch/CMakeLists.txt
+++ b/tests-batch/CMakeLists.txt
@@ -3,7 +3,7 @@
 
 add_subdirectory(config)
 add_subdirectory(main)
-add_subdirectory(net)
+#add_subdirectory(net)
 #add_subdirectory(eventdata)
 #add_subdirectory(eventhandler)
 #add_subdirectory(plugin)
