fixed typo in CavePainting-Lite makelists and updated readme

--- a/examples/CavePainting-Lite/CMakeLists.txt
+++ b/examples/CavePainting-Lite/CMakeLists.txt
@@ -90,7 +90,7 @@ endif()
 
 # GLM (GLM's installation provides a cmake config package with the imported target 'glm')
 find_package(glm CONFIG)
-if (NOT ${GLM_FOUND})
+if (NOT ${glm_FOUND})
     message(STATUS "Package not found (glm): Ok, will download, build, and install for you.")
     message(STATUS "Download dir: ${EXTERNAL_DIR}.")
     message(STATUS "Install dir: ${CMAKE_INSTALL_PREFIX}.")
@@ -107,9 +107,9 @@ if (NOT ${GLM_FOUND})
     )
 
     message(STATUS "Searching (again, right after autobuilding) for GLM...")
-    find_package(GLM CONFIG)
+    find_package(glm CONFIG)
 
-    if (NOT ${GLM_FOUND})
+    if (NOT ${glm_FOUND})
         message(FATAL_ERROR "GLM was autobuilt for you, and it should now be installed at the prefix ${CMAKE_INSTALL_PREFIX}, but cmake is still unable to find it with find_package().")
     endif()
 endif()
