--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -523,6 +523,7 @@ if (WITH_DOCUMENTATION)
   install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html 
       DESTINATION ${INSTALL_DOC_DEST}
       COMPONENT Docs
+      OPTIONAL
   )
 endif()
 
