enabled testing for cavepainting

--- a/examples/CavePainting-Lite/CMakeLists.txt
+++ b/examples/CavePainting-Lite/CMakeLists.txt
@@ -152,3 +152,8 @@ if (NOT APPLE)
     target_link_libraries(${PROJECT_NAME} PUBLIC GLEW::GLEW)
 endif()
 
+
+
+#---------------------- Enable Testing - Needed for Nightly Builds of MinVR ----------------------
+enable_testing()
+include(CTest)
