added same error checks used in minvr external proj cmake to the cavepainting-lite version, also corrected typo in glfw path to cmakelists.txt in the main cavepainting-lite cmakelists.txt

--- a/examples/CavePainting-Lite/CMakeLists.txt
+++ b/examples/CavePainting-Lite/CMakeLists.txt
@@ -137,7 +137,7 @@ if (NOT APPLE)
         )
         ExternalProject_BuildAndInstallNow(
             GLEW
-            src
+            src/build/cmake
         )
 
         message(STATUS "Searching (again, right after autobuilding) for GLEW...")
