Enabled GLEW for linux.

--- a/plugins/GLFW/CMakeLists.txt
+++ b/plugins/GLFW/CMakeLists.txt
@@ -52,7 +52,7 @@ UseOpenGL(${PROJECT_NAME} PUBLIC)
 
 
 # Setup dependency on GLEW (only needed on Windows):
-if (WIN32)
+if (NOT APPLE)
   include(UseGLEW)
   UseGLEW(${PROJECT_NAME} PUBLIC)
 endif()
