--- a/tests-interactive/opengl-fixedfuncpipeline/CMakeLists.txt
+++ b/tests-interactive/opengl-fixedfuncpipeline/CMakeLists.txt
@@ -31,14 +31,14 @@ target_link_libraries(${PROJECT_NAME} PUBLIC MinVR)
 
 
 # Setup dependency on OpenGL:
-include(UseOpenGL)
-UseOpenGL(${PROJECT_NAME} PUBLIC)
+include(AutoBuildOpenGL)
+AutoBuild_use_package_OpenGL(${PROJECT_NAME} PUBLIC)
 
 
-# Setup dependency on GLEW (only needed on Windows):
-if (WIN32)
-  include(UseGLEW)
-  UseGLEW(${PROJECT_NAME} PUBLIC)
+# Setup dependency on GLEW (not needed on OSX):
+if (NOT APPLE)
+  include(AutoBuildGLEW)
+  AutoBuild_use_package_GLEW(${PROJECT_NAME} PUBLIC)
 endif()
 
 
