--- a/plugins/FREEGLUT/CMakeLists.txt
+++ b/plugins/FREEGLUT/CMakeLists.txt
@@ -43,19 +43,19 @@ target_link_libraries(${PROJECT_NAME} PUBLIC MinVR)
 
 
 # Setup dependency on FreeGLUT:
-include(UseFreeGLUT)
-UseFreeGLUT(${PROJECT_NAME} PUBLIC)
+include(AutoBuildFreeGLUT)
+AutoBuild_use_package_FreeGLUT(${PROJECT_NAME} PUBLIC)
 
 
 # Setup dependency on OpenGL:
-include(UseOpenGL)
-UseOpenGL(${PROJECT_NAME} PUBLIC)
+include(AutoBuildOpenGL)
+AutoBuild_use_package_OpenGL(${PROJECT_NAME} PUBLIC)
 
 
 # Setup dependency on GLEW (only needed on Windows):
 if (NOT APPLE)
-  include(UseGLEW)
-  UseGLEW(${PROJECT_NAME} PUBLIC)
+  include(AutoBuildGLEW)
+  AutoBuild_use_package_GLEW(${PROJECT_NAME} PUBLIC)
 endif()
 
 
