--- a/tests-interactive/opengl-multithreaded/CMakeLists.txt
+++ b/tests-interactive/opengl-multithreaded/CMakeLists.txt
@@ -39,14 +39,14 @@ target_link_libraries(${PROJECT_NAME} PUBLIC MinVR)
 
 
 # Setup dependency on OpenGL:
-include(UseOpenGL)
-UseOpenGL(${PROJECT_NAME} PUBLIC)
+include(AutoBuildOpenGL)
+AutoBuild_use_package_OpenGL(${PROJECT_NAME} PUBLIC)
 
 
 # Setup dependency on GLEW (not needed on OSX):
 if (NOT APPLE)
-    include(UseGLEW)
-    UseGLEW(${PROJECT_NAME} PUBLIC)
+    include(AutoBuildGLEW)
+    AutoBuild_use_package_GLEW(${PROJECT_NAME} PUBLIC)
 endif()
 
 # Setup dependency on C++-11:
